# MAIS-Spark

./: .gitignore  README.md  pyproject.toml
src/: extract_data.py  livre.py  main.py  reading.py
src/Tests/: test_informacao_operation.py
src/handlers/: __init__.py  dataframe_manipulations.py  db_operations.py  extract_data.py
