[tool.poetry]
name = "pysparkmais"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "src", from = "."},
    {include = "info", from = "src"},
    {include = "handlers", from = "src"},
    {include = "Tests", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "3.5.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
